# deep-agents-from-scratch

./: .env.example  README.md  pyproject.toml
notebooks/: 01-DeepAgents-Basic.ipynb  02-DeepAgents-TODO.ipynb  03-DeepAgents-Context-Offloading.ipynb  04-DeepAgents-Sub-Agent-Delegation.ipynb  05-DeepAgents-Full-Version.ipynb  0_create_agent-CONVERT.ipynb  1_todo-CONVERT.ipynb  2_files-CONVERT.ipynb  3_subagents-CONVERT.ipynb  4_full_agent-CONVERT.ipynb
src/deep_agents_from_scratch/: file_tools.py  research_tools.py  state.py  task_tool.py  todo_tools.py
