[project]
name = "deep_agents_from_scratch"
version = "0.1.0"
description = "Build a deep agent from scratch"
requires-python = ">=3.11, <3.14"
dependencies = [
    "langgraph>=1.0.3",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-anthropic>=1.0.4",
    "langchain_community>=0.4.1",
    "langchain_tavily>=0.2.13",
    "langchain_mcp_adapters>=0.1.13",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "tavily-python>=0.7.13",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "deepagents>=0.2.7",
    "langchain-teddynote>=0.5.4",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deep_agents_from_scratch"]

[tool.setuptools.package-dir]
"deep_agents_from_scratch" = "src/deep_agents_from_scratch"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
